Updated footer on projects page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Portfolio Webpage</title>
   <link href="https://fonts.googleapis.com/css?family=Russo One" rel="stylesheet" type="text/css">
+
+  <script src="https://kit.fontawesome.com/dc235db291.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -386,7 +388,20 @@
 </main>
 
 <footer id="footer" class="text">
-  <a href="https://codepen.io/akoz002" target="_blank" id="profile-link" class="link-tile link-tile-text">Click here for my CodePen profile</a>
+  <div id="footer-links">
+    <a href="https://github.com/akoz002" target="_blank" id="profile-link" class="footer-link">
+      <i class="fab fa-github"></i>
+    </a>
+    <a href="https://codepen.io/akoz002" target="_blank" class="footer-link">
+      <i class="fab fa-codepen"></i>
+    </a>
+    <a href="https://www.freecodecamp.org/alexknz" target="_blank" class="footer-link">
+      <i class="fab fa-free-code-camp"></i>
+    </a>
+    <a href="https://www.linkedin.com/in/alex-kozlov-nz" target="_blank" class="footer-link">
+      <i class="fab fa-linkedin"></i>
+    </a>
+  </div>
   <p>&copy; 2020 Alex Kozlov</p>
 </footer>
 
