--- a/index.html
+++ b/index.html
@@ -373,6 +373,22 @@
           <p>Click here for Bar Chart</p>
         </a>        
       </div>
+
+      <!-- Project 2: Scatterplot -->
+
+      <section class="project-tile">
+        <header class="heading">
+          <h3>Project 2: Scatterplot</h3><hr class="sub-section-hr">
+        </header>
+        <p>Plots a scatterplot with D3.js which presents doping allegations data in professional cycling. The data points are color-coded to differentiate between cyclists with and without doping allegations. A tooltip presents additional information about each data point. The data is fetched with AJAX.</p>
+      </section>
+
+      <div class="link-tile">
+        <a href="https://codepen.io/akoz002/full/gOpzgqL" target="_blank" class="link-tile-text">
+          <img src="https://bitbucket.org/alexknz/public_files/raw/1ceda2586c35729286df8c9a043199bac1096640/d3_projects/scatterplot.png" alt="Link image for scatterplot" class="link-image">
+          <p>Click here for Scatterplot</p>
+        </a>
+      </div>
       
     </div>
   </section>
