--- a/index.html
+++ b/index.html
@@ -389,6 +389,22 @@
           <p>Click here for Scatterplot</p>
         </a>
       </div>
+
+      <!-- Project 3: Heat Map -->
+
+      <section class="project-tile">
+        <header class="heading">
+          <h3>Project 3: Heat Map</h3><hr class="sub-section-hr">
+        </header>
+        <p>Plots a heat map visualising global land surface temperature over months and years. Each cell shows the temperature for a given month of a given year. The temperature value is color coded using the color scale shown in the legend. Each cell also displays a tooltip showing the exact temperature value.</p>
+      </section>
+
+      <div class="link-tile">
+        <a href="https://codepen.io/akoz002/full/wvaxdpQ" target="_blank" class="link-tile-text">
+          <img src="https://bitbucket.org/alexknz/public_files/raw/1eec84a9c08e06f57cb4e734acb2e90edb4720a1/d3_projects/heatmap.png" alt="Link image for heat map" class="link-image">
+          <p>Click here for Heat Map</p>
+        </a>
+      </div>
       
     </div>
   </section>
