Added choropleth map

--- a/index.html
+++ b/index.html
@@ -406,6 +406,22 @@
         </a>
       </div>
       
+      <!-- Project 4: Choropleth Map -->
+
+      <section class="project-tile">
+        <header class="heading">
+          <h3>Project 4: Choropleth Map</h3><hr class="sub-section-hr">
+        </header>
+        <p>A choropleth is a geographic map which uses color to encode additional information. This choropleth plots a map of the U.S. by state and county. Each county is color coded to show the education level of its residents. On hover a tooltip shows the county name and the exact percentage education level.</p>
+      </section>
+
+      <div class="link-tile">
+        <a href="https://codepen.io/akoz002/full/zYGQGrB" target="_blank" class="link-tile-text">
+          <img src="https://bitbucket.org/alexknz/public_files/raw/eb809f7b2f3c859b89d19c0a7058c4f29bed4c9d/d3_projects/choropleth.png" alt="Link image for choropleth map" class="link-image">
+          <p>Click here for Choropleth</p>
+        </a>
+      </div>
+
     </div>
   </section>
   
