--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
           <p>Click here for Heat Map</p>
         </a>
       </div>
-      
+
       <!-- Project 4: Choropleth Map -->
 
       <section class="project-tile">
@@ -419,6 +419,22 @@
         <a href="https://codepen.io/akoz002/full/zYGQGrB" target="_blank" class="link-tile-text">
           <img src="https://bitbucket.org/alexknz/public_files/raw/eb809f7b2f3c859b89d19c0a7058c4f29bed4c9d/d3_projects/choropleth.png" alt="Link image for choropleth map" class="link-image">
           <p>Click here for Choropleth</p>
+        </a>
+      </div>
+
+      <!-- Project 5: Treemap -->
+
+      <section class="project-tile">
+        <header class="heading">
+          <h3>Project 5: Treemap</h3><hr class="sub-section-hr">
+        </header>
+        <p>A treemap chart subdivides the plot area into rectangular cells, where the size of each cell is proportional to an associated value. This treemap plots the top most sold video game titles by platform. The area of each cell (the "value") indicates the relative volume of sales of the video game title. The color of each cell indicates the gaming platform.</p>
+      </section>
+
+      <div class="link-tile">
+        <a href="https://codepen.io/akoz002/full/KKdKpbG" target="_blank" class="link-tile-text">
+          <img src="https://bitbucket.org/alexknz/public_files/raw/74de9be3964c021d467c9cdeb0ba0dabdbe84a49/d3_projects/treemap.png" alt="Link image for treemap" class="link-image">
+          <p>Click here for Treemap</p>
         </a>
       </div>
 
