--- a/react-projects/markdown-previewer/src/index.html
+++ b/react-projects/markdown-previewer/src/index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Aldrich" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/dc235db291.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="./style.scss">
 </head>
 <body>
