--- a/react-projects/javascript-calculator/src/index.html
+++ b/react-projects/javascript-calculator/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>JavaScript Calculator</title>
   <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="./style.scss">
 </head>
 <body>
