--- a/react-projects/pomodoro-clock/src/index.html
+++ b/react-projects/pomodoro-clock/src/index.html
@@ -5,6 +5,7 @@
   <title>Pomodoro Clock</title>
   <link href="https://fonts.googleapis.com/css?family=Passion One" rel="stylesheet" type="text/css">
   <script src="https://kit.fontawesome.com/dc235db291.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="./style.scss">
 </head>
 <body>
