--- a/react-projects/quote-generator/src/index.html
+++ b/react-projects/quote-generator/src/index.html
@@ -5,6 +5,7 @@
   <title>Quote Generator</title>
   <script src="https://kit.fontawesome.com/dc235db291.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Great+Vibes|Italianno&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="./style.scss">
 </head>
 <body>
