--- a/d3-projects/treemap/src/index.html
+++ b/d3-projects/treemap/src/index.html
@@ -4,12 +4,10 @@
   <meta charset="UTF-8">
   <title>Treemap</title>
   <link href="https://fonts.googleapis.com/css?family=Quantico" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/5.15.1/d3.min.js'></script>
-  <script  src="./script.js"></script>
-
+  <script src="./index.js"></script>
 </body>
 </html>
