--- a/react-projects/markdown-previewer/src/index.html
+++ b/react-projects/markdown-previewer/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Markdown Previewer</title>
   <link href="https://fonts.googleapis.com/css?family=Aldrich" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet">
@@ -10,6 +11,7 @@
   <link rel="stylesheet" href="./style.scss">
 </head>
 <body>
+  <!-- Container for the React app. -->
   <div id="root"></div>
   <script src="./index.js"></script>
 </body>
