--- a/react-projects/drum-machine/src/index.html
+++ b/react-projects/drum-machine/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Drum Machine</title>
   <link href="https://fonts.googleapis.com/css?family=Metal+Mania&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="./style.scss">
 </head>
 <body>
+  <!-- Container for the React app. -->
   <div id="root"></div>
   <script src="./index.js"></script>
 </body>
