--- a/react-projects/javascript-calculator/src/index.html
+++ b/react-projects/javascript-calculator/src/index.html
@@ -2,13 +2,30 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>JavaScript Calculator</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Calculator App</title>
   <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="./style.scss">
 </head>
 <body>
-  <div id="root"></div>
+  <header>
+    <h1>Calculator App</h1>
+    <p>
+      Press keyboard keys or click on the buttons.
+    </p>
+  </header>
+
+  <!-- Container for the React app. -->
+  <div id="app"></div>
+
+  <footer>
+    <p>
+      Implemented by Alex Kozlov for <a href="http://www.freecodecamp.org"
+      target="_blank">freeCodeCamp</a>.
+    </p>
+  </footer>
+
   <script src="./index.js"></script>
 </body>
 </html>
