Updated drum app key handling

--- a/react-projects/drum-machine/src/index.html
+++ b/react-projects/drum-machine/src/index.html
@@ -9,8 +9,29 @@
   <link rel="stylesheet" href="./style.scss">
 </head>
 <body>
+  <header>
+    <h1>Drum Machine App</h1>
+    <p>
+      Press keys or click on the buttons to play drum samples.
+    </p>
+    <p>
+      Credit for drum samples goes to the awesome
+      <a href="https://www.youtube.com/watch?v=IKIDbeTGkd0" target="_blank">
+        metal drum samples pack
+      </a>.
+    </p>
+  </header>
+
   <!-- Container for the React app. -->
-  <div id="root"></div>
+  <div id="app"></div>
+
+  <footer>
+    <p>
+      Implemented by Alex Kozlov for <a href="http://www.freecodecamp.org"
+      target="_blank">freeCodeCamp</a>.
+    </p>
+  </footer>
+
   <script src="./index.js"></script>
 </body>
 </html>
