--- a/react-projects/markdown-previewer/src/index.html
+++ b/react-projects/markdown-previewer/src/index.html
@@ -11,8 +11,24 @@
   <link rel="stylesheet" href="./style.scss">
 </head>
 <body>
+  <header id="title">
+    <h1>Markdown Previewer</h1>
+    <p>
+      Type markdown text in the editor, and it will appear in the preview
+      panel.
+    </p>
+  </header>
+
   <!-- Container for the React app. -->
-  <div id="root"></div>
+  <div id="app"></div>
+
+  <footer>
+    <p>
+      Implemented by Alex Kozlov for <a href="http://www.freecodecamp.org"
+      target="_blank">freeCodeCamp</a>.
+    </p>
+  </footer>
+
   <script src="./index.js"></script>
 </body>
 </html>
