--- a/react-projects/pomodoro-clock/src/index.html
+++ b/react-projects/pomodoro-clock/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Pomodoro Clock</title>
   <link href="https://fonts.googleapis.com/css?family=Passion One" rel="stylesheet" type="text/css">
   <script src="https://kit.fontawesome.com/dc235db291.js" crossorigin="anonymous"></script>
@@ -9,7 +10,24 @@
   <link rel="stylesheet" href="./style.scss">
 </head>
 <body>
-  <div id="root"></div>
+  <header>
+    <h1>Pomodoro Clock</h1>
+    <p>Click on the buttons or press keyboard keys.</p>
+    <p>Ctrl + Up/Down Arrow = Update Session Length</p>
+    <p>Alt + Up/Down Arrow = Update Break Length</p>
+    <p>Enter = Start/Stop, Backspace/Delete = Reset</p>
+  </header>
+
+  <!-- Container for the React app. -->
+  <div id="app"></div>
+
+  <footer>
+    <p>
+      Implemented by Alex Kozlov for <a href="http://www.freecodecamp.org"
+      target="_blank">freeCodeCamp</a>.
+    </p>
+  </footer>
+
   <script src="./index.js"></script>
 </body>
 </html>
