--- a/react-projects/quote-generator/src/index.html
+++ b/react-projects/quote-generator/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Quote Generator</title>
   <script src="https://kit.fontawesome.com/dc235db291.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Great+Vibes|Italianno&display=swap" rel="stylesheet">
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="./style.scss">
 </head>
 <body>
+  <!-- Container for all of the page content. -->
   <div id="root"></div>
   <script src="./index.js"></script>
 </body>
