Fixed keyboard controls for clock

--- a/react-projects/pomodoro-clock/src/index.html
+++ b/react-projects/pomodoro-clock/src/index.html
@@ -13,8 +13,8 @@
   <header>
     <h1>Pomodoro Clock</h1>
     <p>Click on the buttons or press keyboard keys.</p>
-    <p>Ctrl + Up/Down Arrow = Update Session Length</p>
-    <p>Alt + Up/Down Arrow = Update Break Length</p>
+    <p>Alt + Up/Down Arrow = Update Session Length</p>
+    <p>Alt + Shift + Up/Down Arrow = Update Break Length</p>
     <p>Enter = Start/Stop, Backspace/Delete = Reset</p>
   </header>
 
