--- a/d3-projects/choropleth/src/index.html
+++ b/d3-projects/choropleth/src/index.html
@@ -2,12 +2,27 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Choropleth Map</title>
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif:700i&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <header>
+    <h1>U.S. Educational Level</h1>
+  </header>
+
+  <!-- The container of the <svg> element. -->
+  <main id="svg-container"></main>
+
+  <footer>
+    <p>
+      Implemented by Alex Kozlov for <a href="http://www.freecodecamp.org"
+      target="_blank">freeCodeCamp</a>.
+    </p>
+  </footer>
+
   <script src="./index.js"></script>
 </body>
 </html>
