Cleaned up bar chart

--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -598,7 +598,7 @@
           <li>
             <strong>Description:</strong> plots a bar chart of US GDP data over
             time. On mouse-over the given bar is highlighted and a tooltip is
-            displayed. The chart resizes responsively.
+            displayed.
           </li>
           <li>
             <strong>Technologies used:</strong> D3, Fetch API.
