Cleaned up JavaScript projects

--- a/javascript-projects/orbital-period/src/index.html
+++ b/javascript-projects/orbital-period/src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Orbital Period</title>
   <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
@@ -30,7 +32,8 @@
       </li>
       <li>
         Ref:
-        <a href="https://en.wikipedia.org/wiki/Orbital_period" target="_blank">
+        <a id="ref-link" href="https://en.wikipedia.org/wiki/Orbital_period"
+          target="_blank">
           https://en.wikipedia.org/wiki/Orbital_period
         </a>
       </li>
@@ -70,8 +73,8 @@
 
   <footer>
     <p>
-      Requirements by <a href="https://www.freecodecamp.org/">freeCodeCamp</a>,
-      implemented by Alex Kozlov
+      Requirements by <a href="https://www.freecodecamp.org/" target="_blank">
+      freeCodeCamp</a>, implemented by Alex Kozlov.
     </p>
   </footer>
 
