Cleaned up html doc page

--- a/html-projects/documentation-page/src/index.html
+++ b/html-projects/documentation-page/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Technical Documentation Page</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Documentation Page</title>
   <link href="https://fonts.googleapis.com/css?family=Baskervville" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Fira Sans" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet" type="text/css">
@@ -10,9 +11,9 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<nav id="navbar" class="nav-text" tabindex="2">
+<nav tabindex="2">
   <header>
-    <h1 class="title-text">JavaScript Tutorial</h1>
+    <h1>JavaScript Tutorial</h1>
   </header>
   <a href="#Introduction" class="nav-link"><b>Introduction</b></a>
   <a href="#JavaScript_and_Java" class="nav-link"><b>JavaScript and Java</b></a>
@@ -29,9 +30,9 @@
   <a href="#Reference" class="nav-link"><b>Reference</b></a>
 </nav>
 
-<main id="main-doc" class="text" tabindex="1">
-  <section id="Introduction" class="main-section">
-    <header class="nav-text">
+<main tabindex="1">
+  <section id="Introduction">
+    <header>
       <h2>Introduction</h2>
     </header>
 
@@ -64,8 +65,8 @@
     </ul>
   </section>
 
-  <section id="JavaScript_and_Java" class="main-section">
-    <header class="nav-text">
+  <section id="JavaScript_and_Java">
+    <header>
       <h2>JavaScript and Java</h2>
     </header>
 
@@ -95,8 +96,8 @@
     </p>
   </section>
 
-  <section id="Hello_World" class="main-section">
-    <header class="nav-text">
+  <section id="Hello_World">
+    <header>
       <h2>Hello World</h2>
     </header>
 
@@ -126,8 +127,8 @@
     </pre>
   </section>
 
-  <section id="Variables" class="main-section">
-    <header class="nav-text">
+  <section id="Variables">
+    <header>
       <h2>Variables</h2>
     </header>
 
@@ -140,8 +141,8 @@
     </p>
   </section>
 
-  <section id="Declaring_Variables" class="main-section">
-    <header class="nav-text">
+  <section id="Declaring_Variables">
+    <header>
       <h2>Declaring Variables</h2>
     </header>
 
@@ -173,8 +174,8 @@
     </ol>
   </section>
 
-  <section id="Variable_Scope" class="main-section">
-    <header class="nav-text">
+  <section id="Variable_Scope">
+    <header>
       <h2>Variable Scope</h2>
     </header>
 
@@ -216,8 +217,8 @@
     </pre>
   </section>
 
-  <section id="Global_Variables" class="main-section">
-    <header class="nav-text">
+  <section id="Global_Variables">
+    <header>
       <h2>Global Variables</h2>
     </header>
 
@@ -228,8 +229,8 @@
     </p>
   </section>
 
-  <section id="Constants" class="main-section">
-    <header class="nav-text">
+  <section id="Constants">
+    <header>
       <h2>Constants</h2>
     </header>
 
@@ -252,8 +253,8 @@
     </p>
   </section>
 
-  <section id="Data_Types" class="main-section">
-    <header class="nav-text">
+  <section id="Data_Types">
+    <header>
       <h2>Data Types</h2>
     </header>
 
@@ -295,8 +296,8 @@
     </p>
   </section>
 
-  <section id="If...Else_Statement" class="main-section">
-    <header class="nav-text">
+  <section id="If...Else_Statement">
+    <header>
       <h2>If...Else Statement</h2>
     </header>
 
@@ -351,8 +352,8 @@
     </p>
   </section>
 
-  <section id="While_Statement" class="main-section">
-    <header class="nav-text">
+  <section id="While_Statement">
+    <header>
       <h2>While Statement</h2>
     </header>
 
@@ -379,8 +380,8 @@
     </p>
   </section>
 
-  <section id="Function_Declarations" class="main-section">
-    <header class="nav-text">
+  <section id="Function_Declarations">
+    <header>
       <h2>Function Declarations</h2>
     </header>
 
@@ -419,17 +420,21 @@
     </p>
   </section>
 
-  <section id="Reference" class="main-section">
-    <header class="nav-text">
+  <section id="Reference">
+    <header>
       <h2>Reference</h2>
     </header>
 
     <ul>
       <li>
         <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide"
-          target="_blank" id="ref-link">
+          target="_blank">
           Mozilla JavaScript Guide
         </a>
+      </li><br>
+      <li>
+        Implemented by Alex Kozlov for <a href="http://www.freecodecamp.org"
+        target="_blank">freeCodeCamp</a>.
       </li>
     </ul><br>
   </section>
