--- a/html-projects/product-page/src/index.html
+++ b/html-projects/product-page/src/index.html
@@ -2,32 +2,28 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Product Landing Page</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Shop Page</title>
   <link href="https://fonts.googleapis.com/css?family=Berkshire Swash" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<div id="background">
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#signup">Signup</a>
+  </nav>
 
-  <header id="header">
-    <nav id="nav-bar" class="text">
-      <a href="#header" class="nav-link">Home</a>
-      <a href="#main" class="nav-link">About</a>
-      <a href="#form" class="nav-link">Signup</a>
-    </nav>
-    <div id="title">
-      <img src="https://images.uesp.net/7/7f/OB-items-Ebony_Warhammer.png"
-        alt="Pound World Logo" class="logo" id="header-img">
-      <h1>Pound World</h1>
-      <img src="https://images.uesp.net/7/7f/OB-items-Ebony_Warhammer.png"
-        alt="Pound World Logo" class="logo">
-    </div>
-    <p id="sub-title">Pounding the savings into your pocket.</p>
+  <header id="home">
+    <img src="./images/hammer.png" alt="Pound World Logo" class="logo">
+    <h1>Pound World</h1>
+    <img src="./images/hammer.png" alt="Pound World Logo" class="logo">
   </header>
+  <p id="about">Pounding the savings into your pocket.</p>
 
-  <main id="main" class="text">
+  <main>
     <ul>
       <li>
         <strong>Unbeatable Value:</strong> we manufacture and sell the highest
@@ -52,16 +48,25 @@
       frameborder="0" allowfullscreen>
     </iframe>
 
-    <form id="form" action="https://www.freecodecamp.com/email-submit">
+    <form id="signup" action="https://www.freecodecamp.com/email-submit"
+      target="_blank">
       <label for="email">
         Sign up with your email address below for more unbeatable savings:
       </label>
-      <input type="email" id="email" name="email" placeholder="Enter your email" required>
-      <input type="submit" id="submit" value="Sign Up" class="text">
+      <input id="email" type="email" name="email" placeholder="Enter your email"
+        required>
+      <input type="submit" value="Sign Up">
     </form>
   </main>
 
-  <footer class="text">&copy; 1669 Pound World</footer>
-</div>
+  <footer>
+    <p>
+      Implemented by Alex Kozlov for <a href="http://www.freecodecamp.org"
+      target="_blank">freeCodeCamp</a>.
+    </p>
+    <p>
+      &copy; 1669 Pound World
+    </p>
+  </footer>
 </body>
 </html>
