--- a/html-projects/tribute-page/src/index.html
+++ b/html-projects/tribute-page/src/index.html
@@ -2,23 +2,22 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Tribute Page</title>
   <link href="https://fonts.googleapis.com/css?family=Calistoga" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<main id="main">
-  <h1 id="title" class="text">Ronnie James Dio</h1>
-  <div id="img-div">
-    <img src="https://www.metal-archives.com/images/4/2/8/2/4282_artist.jpg"
-      id="image" class="border" alt="Picture of Ronnie James Dio">
-    <p id="img-caption" class="text">
+  <header>
+    <h1>Ronnie James Dio</h1>
+    <img src="./images/dio.jpg" alt="Picture of Ronnie James Dio">
+    <p>
       <em>Ronnie James Dio, The Master of Heavy Metal<br>1942-2010</em>
     </p>
-  </div>
+  </header>
 
-  <article id="tribute-info" class="text border">
+  <main>
     <section>
       <h2><em>&#39;80 - &#39;81: The Classic Era Pt.I</em></h2>
       <p>
@@ -69,14 +68,19 @@
         would be Dio's final solo album before his death in 2010.
       </p>
     </section>
-  </article>
+  </main>
 
-  <div id="footer" class="text">
-    <a href="https://www.metal-archives.com/bands/Dio/"
-      id="tribute-link" target="_blank">
-      Read more about Dio's music.
-    </a>
-  </div>
+  <footer>
+    <p>
+      <a href="https://www.metal-archives.com/bands/Dio/" target="_blank">
+        Read more about Dio's music.
+      </a>
+    </p>
+    <p>
+      Implemented by Alex Kozlov for <a href="http://www.freecodecamp.org"
+      target="_blank">freeCodeCamp</a>.
+    </p>
+  </footer>
 </main>
 </body>
 </html>
