Added html pages to portfolio

--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -23,6 +23,7 @@
       <a href="#react-apps" class="navlink">React Apps</a>
       <a href="#d3-plots" class="navlink">D3 Plots</a>
       <a href="#js-algorithms" class="navlink">JS Algorithms</a>
+      <a href="#html-pages" class="navlink">HTML Pages</a>
     </div>
   </div>
 
@@ -832,6 +833,146 @@
           <img src="./images/js-algorithms/orbital-period.png"
             alt="Link image for Orbital Period" class="link-tile-image">
           <p class="link-tile-text">Orbital Period</p>
+        </a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- HTML Pages. -->
+  <section id="html-pages">
+    <h2>HTML Web Pages</h2>
+    <hr class="h2-hr">
+    <div class="section-desc">
+      <p>
+        Web pages implemented purely with HTML/CSS. You can also view the
+        <a href="https://github.com/akoz002/web-projects/tree/master/portfolio/src"
+        target="_blank">portfolio page source on Github</a>.
+      </p>
+    </div>
+
+    <div class="projects-grid">
+
+      <!-- Doc Page. -->
+      <div class="info-tile">
+        <h3>Doc Page</h3>
+        <hr class="h3-hr">
+        <ul>
+          <li>
+            <strong>Description:</strong> an introductory JavaScript documentation
+            page with a side nav bar.
+          </li>
+          <li>
+            <strong>Technologies used:</strong> HTML, CSS.
+          </li>
+          <li>
+            <strong>Source:</strong>
+            <a href="https://github.com/akoz002/web-projects/tree/master/html-projects/documentation-page/src"
+              target="_blank">
+              Doc Page source on Github.
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="link-tile">
+        <a href="https://akoz002.github.io/web-projects/html-projects/documentation-page/dist/"
+          target="_blank">
+          <img src="./images/html-pages/doc-page.png" alt="Link image for Doc Page"
+            class="link-tile-image">
+          <p class="link-tile-text">Doc Page</p>
+        </a>
+      </div>
+
+      <!-- Shop Page. -->
+      <div class="info-tile">
+        <h3>Shop Page</h3>
+        <hr class="h3-hr">
+        <ul>
+          <li>
+            <strong>Description:</strong> a parody shop information page with a
+            top nav bar and an embedded video.
+          </li>
+          <li>
+            <strong>Technologies used:</strong> HTML, CSS.
+          </li>
+          <li>
+            <strong>Source:</strong>
+            <a href="https://github.com/akoz002/web-projects/tree/master/html-projects/product-page/src"
+              target="_blank">
+              Shop Page source on Github.
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="link-tile">
+        <a href="https://akoz002.github.io/web-projects/html-projects/product-page/dist/"
+          target="_blank">
+          <img src="./images/html-pages/shop-page.png" alt="Link image for Shop Page"
+            class="link-tile-image">
+          <p class="link-tile-text">Shop Page</p>
+        </a>
+      </div>
+
+      <!-- Tribute Page. -->
+      <div class="info-tile">
+        <h3>Tribute Page</h3>
+        <hr class="h3-hr">
+        <ul>
+          <li>
+            <strong>Description:</strong> a tribute page to a heavy metal musician.
+          </li>
+          <li>
+            <strong>Technologies used:</strong> HTML, CSS.
+          </li>
+          <li>
+            <strong>Source:</strong>
+            <a href="https://github.com/akoz002/web-projects/tree/master/html-projects/tribute-page/src"
+              target="_blank">
+              Tribute Page source on Github.
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="link-tile">
+        <a href="https://akoz002.github.io/web-projects/html-projects/tribute-page/dist/"
+          target="_blank">
+          <img src="./images/html-pages/tribute-page.png" alt="Link image for Tribute Page"
+            class="link-tile-image">
+          <p class="link-tile-text">Tribute Page</p>
+        </a>
+      </div>
+
+      <!-- Web Form. -->
+      <div class="info-tile">
+        <h3>Web Form</h3>
+        <hr class="h3-hr">
+        <ul>
+          <li>
+            <strong>Description:</strong> an example web form with different
+            kinds of inputs.
+          </li>
+          <li>
+            <strong>Technologies used:</strong> HTML, CSS.
+          </li>
+          <li>
+            <strong>Source:</strong>
+            <a href="https://github.com/akoz002/web-projects/tree/master/html-projects/survey-form/src"
+              target="_blank">
+              Web Form source on Github.
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="link-tile">
+        <a href="https://akoz002.github.io/web-projects/html-projects/survey-form/dist/"
+          target="_blank">
+          <img src="./images/html-pages/survey-form.png" alt="Link image for Web Form"
+            class="link-tile-image">
+          <p class="link-tile-text">Web Form</p>
         </a>
       </div>
 
