Added screen-reader css to portfolio

--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -116,7 +116,7 @@
       <div class="link-tile">
         <a href="https://akoz002-nodejs-exercisetracker.herokuapp.com/"
           target="_blank">
-          <img src="./images/fullstack-apps/exercise-tracker.png"
+          <img src="./images/fullstack-apps/exercise-tracker.png" aria-hidden="true"
             alt="Link image for exercise tracker" class="link-tile-image">
           <p class="link-tile-text">Exercise Tracker</p>
         </a>
@@ -148,7 +148,7 @@
       <div class="link-tile">
         <a href="https://akoz002-nodejs-urlshortener.herokuapp.com/"
           target="_blank">
-          <img src="./images/fullstack-apps/url-shortener.png"
+          <img src="./images/fullstack-apps/url-shortener.png" aria-hidden="true"
             alt="Link image for URL shortener" class="link-tile-image">
           <p class="link-tile-text">URL Shortener</p>
         </a>
@@ -180,7 +180,7 @@
       <div class="link-tile">
         <a href="https://akoz002-nodejs-file-metadata.herokuapp.com/"
           target="_blank">
-          <img src="./images/fullstack-apps/file-metadata.png"
+          <img src="./images/fullstack-apps/file-metadata.png" aria-hidden="true"
             alt="Link image for File Analyser" class="link-tile-image">
           <p class="link-tile-text">File Analyser</p>
         </a>
@@ -212,7 +212,7 @@
       <div class="link-tile">
         <a href="https://akoz002-nodejs-timestamp.herokuapp.com/"
           target="_blank">
-          <img src="./images/fullstack-apps/timestamp.png"
+          <img src="./images/fullstack-apps/timestamp.png" aria-hidden="true"
             alt="Link image for Timestamp App" class="link-tile-image">
           <p class="link-tile-text">Timestamp App</p>
         </a>
@@ -244,7 +244,7 @@
       <div class="link-tile">
         <a href="https://akoz002-nodejs-headerparser.herokuapp.com/"
           target="_blank">
-          <img src="./images/fullstack-apps/header-parser.png"
+          <img src="./images/fullstack-apps/header-parser.png" aria-hidden="true"
             alt="Link image for Header Parser" class="link-tile-image">
           <p class="link-tile-text">Header Parser</p>
         </a>
@@ -298,7 +298,7 @@
       <div class="link-tile">
         <a href="https://akoz002.github.io/web-projects/react-projects/markdown-previewer/dist/"
           target="_blank">
-          <img src="./images/react-apps/markdown-previewer.png"
+          <img src="./images/react-apps/markdown-previewer.png" aria-hidden="true"
             alt="Link image for Markdown Previewer" class="link-tile-image">
           <p class="link-tile-text">Markdown Previewer</p>
         </a>
@@ -330,7 +330,7 @@
       <div class="link-tile">
         <a href="https://akoz002.github.io/web-projects/react-projects/drum-machine/dist/"
           target="_blank">
-          <img src="./images/react-apps/drum-machine.png"
+          <img src="./images/react-apps/drum-machine.png" aria-hidden="true"
             alt="Link image for Drum Machine" class="link-tile-image">
           <p class="link-tile-text">Drum Machine</p>
         </a>
@@ -362,7 +362,7 @@
       <div class="link-tile">
         <a href="https://akoz002.github.io/web-projects/react-projects/javascript-calculator/dist/"
           target="_blank">
-          <img src="./images/react-apps/calculator.png"
+          <img src="./images/react-apps/calculator.png" aria-hidden="true"
             alt="Link image for Calculator" class="link-tile-image">
           <p class="link-tile-text">Calculator</p>
         </a>
@@ -396,7 +396,7 @@
       <div class="link-tile">
         <a href="https://akoz002.github.io/web-projects/react-projects/pomodoro-clock/dist/"
           target="_blank">
-          <img src="./images/react-apps/clock.png"
+          <img src="./images/react-apps/clock.png" aria-hidden="true"
             alt="Link image for Clock" class="link-tile-image">
           <p class="link-tile-text">Clock</p>
         </a>
@@ -428,7 +428,7 @@
       <div class="link-tile">
         <a href="https://akoz002.github.io/web-projects/react-projects/quote-generator/dist/"
           target="_blank">
-          <img src="./images/react-apps/quote-generator.png"
+          <img src="./images/react-apps/quote-generator.png" aria-hidden="true"
             alt="Link image for Quote Generator" class="link-tile-image">
           <p class="link-tile-text">Quote Generator</p>
         </a>
@@ -485,7 +485,7 @@
         <a href="https://akoz002.github.io/web-projects/d3-projects/treemap/dist/"
           target="_blank">
           <img src="./images/d3-plots/treemap.png" alt="Link image for Treemap"
-            class="link-tile-image">
+            class="link-tile-image" aria-hidden="true">
           <p class="link-tile-text">Treemap</p>
         </a>
       </div>
@@ -519,7 +519,7 @@
         <a href="https://akoz002.github.io/web-projects/d3-projects/choropleth/dist/"
           target="_blank">
           <img src="./images/d3-plots/choropleth.png" alt="Link image for Choropleth"
-            class="link-tile-image">
+            class="link-tile-image" aria-hidden="true">
           <p class="link-tile-text">Choropleth</p>
         </a>
       </div>
@@ -553,7 +553,7 @@
         <a href="https://akoz002.github.io/web-projects/d3-projects/heatmap/dist/"
           target="_blank">
           <img src="./images/d3-plots/heatmap.png" alt="Link image for Heatmap"
-            class="link-tile-image">
+            class="link-tile-image" aria-hidden="true">
           <p class="link-tile-text">Heatmap</p>
         </a>
       </div>
@@ -586,7 +586,7 @@
         <a href="https://akoz002.github.io/web-projects/d3-projects/scatterplot/dist/"
           target="_blank">
           <img src="./images/d3-plots/scatterplot.png" alt="Link image for Scatterplot"
-            class="link-tile-image">
+            class="link-tile-image" aria-hidden="true">
           <p class="link-tile-text">Scatterplot</p>
         </a>
       </div>
@@ -618,7 +618,7 @@
         <a href="https://akoz002.github.io/web-projects/d3-projects/bar-chart/dist/"
           target="_blank">
           <img src="./images/d3-plots/bar-chart.png" alt="Link image for Barchart"
-            class="link-tile-image">
+            class="link-tile-image" aria-hidden="true">
           <p class="link-tile-text">Barchart</p>
         </a>
       </div>
@@ -667,7 +667,7 @@
       <div class="link-tile">
         <a href="https://akoz002.github.io/web-projects/javascript-projects/cash-register/dist/"
           target="_blank">
-          <img src="./images/js-algorithms/cash-register.png"
+          <img src="./images/js-algorithms/cash-register.png" aria-hidden="true"
             alt="Link image for Cash Register" class="link-tile-image">
           <p class="link-tile-text">Cash Register</p>
         </a>
@@ -698,7 +698,7 @@
       <div class="link-tile">
         <a href="https://akoz002.github.io/web-projects/javascript-projects/roman-converter/dist/"
           target="_blank">
-          <img src="./images/js-algorithms/roman-converter.png"
+          <img src="./images/js-algorithms/roman-converter.png" aria-hidden="true"
             alt="Link image for Roman Converter" class="link-tile-image">
           <p class="link-tile-text">Roman Converter</p>
         </a>
@@ -730,7 +730,7 @@
       <div class="link-tile">
         <a href="https://akoz002.github.io/web-projects/javascript-projects/phone-validator/dist/"
           target="_blank">
-          <img src="./images/js-algorithms/phone-validator.png"
+          <img src="./images/js-algorithms/phone-validator.png" aria-hidden="true"
             alt="Link image for Phone Validator" class="link-tile-image">
           <p class="link-tile-text">Phone Validator</p>
         </a>
@@ -764,7 +764,7 @@
       <div class="link-tile">
         <a href="https://akoz002.github.io/web-projects/javascript-projects/caesars-cipher/dist/"
           target="_blank">
-          <img src="./images/js-algorithms/caesars-cipher.png"
+          <img src="./images/js-algorithms/caesars-cipher.png" aria-hidden="true"
             alt="Link image for Caesars Cipher" class="link-tile-image">
           <p class="link-tile-text">Caesars Cipher</p>
         </a>
@@ -797,7 +797,7 @@
       <div class="link-tile">
         <a href="https://akoz002.github.io/web-projects/javascript-projects/palindrome-checker/dist/"
           target="_blank">
-          <img src="./images/js-algorithms/palindrome-checker.png"
+          <img src="./images/js-algorithms/palindrome-checker.png" aria-hidden="true"
             alt="Link image for Palindrome Checker" class="link-tile-image">
           <p class="link-tile-text">Palindrome Checker</p>
         </a>
@@ -830,7 +830,7 @@
       <div class="link-tile">
         <a href="https://akoz002.github.io/web-projects/javascript-projects/orbital-period/dist/"
           target="_blank">
-          <img src="./images/js-algorithms/orbital-period.png"
+          <img src="./images/js-algorithms/orbital-period.png" aria-hidden="true"
             alt="Link image for Orbital Period" class="link-tile-image">
           <p class="link-tile-text">Orbital Period</p>
         </a>
@@ -879,7 +879,7 @@
         <a href="https://akoz002.github.io/web-projects/html-projects/documentation-page/dist/"
           target="_blank">
           <img src="./images/html-pages/doc-page.png" alt="Link image for Doc Page"
-            class="link-tile-image">
+            class="link-tile-image" aria-hidden="true">
           <p class="link-tile-text">Doc Page</p>
         </a>
       </div>
@@ -910,7 +910,7 @@
         <a href="https://akoz002.github.io/web-projects/html-projects/product-page/dist/"
           target="_blank">
           <img src="./images/html-pages/shop-page.png" alt="Link image for Shop Page"
-            class="link-tile-image">
+            class="link-tile-image" aria-hidden="true">
           <p class="link-tile-text">Shop Page</p>
         </a>
       </div>
@@ -940,7 +940,7 @@
         <a href="https://akoz002.github.io/web-projects/html-projects/tribute-page/dist/"
           target="_blank">
           <img src="./images/html-pages/tribute-page.png" alt="Link image for Tribute Page"
-            class="link-tile-image">
+            class="link-tile-image" aria-hidden="true">
           <p class="link-tile-text">Tribute Page</p>
         </a>
       </div>
@@ -971,7 +971,7 @@
         <a href="https://akoz002.github.io/web-projects/html-projects/survey-form/dist/"
           target="_blank">
           <img src="./images/html-pages/survey-form.png" alt="Link image for Web Form"
-            class="link-tile-image">
+            class="link-tile-image" aria-hidden="true">
           <p class="link-tile-text">Web Form</p>
         </a>
       </div>
@@ -991,15 +991,19 @@
     <div id="footer-links">
       <a href="https://www.linkedin.com/in/alex-kozlov-nz" target="_blank" class="footer-link">
         <i class="fab fa-linkedin"></i>
+        <div class="screen-reader-only">linkedin</div>
       </a>
       <a href="https://github.com/akoz002" target="_blank" class="footer-link">
         <i class="fab fa-github"></i>
+        <div class="screen-reader-only">github</div>
       </a>
       <a href="https://www.freecodecamp.org/alexknz" target="_blank" class="footer-link">
         <i class="fab fa-free-code-camp"></i>
+        <div class="screen-reader-only">freecodecamp</div>
       </a>
       <a href="https://stackoverflow.com/story/alexkozlovnz" target="_blank" class="footer-link">
         <i class="fab fa-stack-overflow"></i>
+        <div class="screen-reader-only">stackoverflow</div>
       </a>
     </div>
     <p>&copy; 2021 Alex Kozlov</p>
