Accessibility fixes for html shop page

--- a/html-projects/product-page/src/index.html
+++ b/html-projects/product-page/src/index.html
@@ -17,9 +17,9 @@
   </nav>
 
   <header id="home">
-    <img src="./images/hammer.png" alt="Pound World Logo" class="logo">
+    <img src="./images/hammer.png" alt="Pound World Logo" class="logo" aria-hidden="true">
     <h1>Pound World</h1>
-    <img src="./images/hammer.png" alt="Pound World Logo" class="logo">
+    <img src="./images/hammer.png" alt="Pound World Logo" class="logo" aria-hidden="true">
   </header>
   <p id="about">Pounding the savings into your pocket.</p>
 
